Replace Alpha Vantage API key with placeholder
Updated Alpha Vantage API key placeholder in .env file.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 # Alpha Vantage API Key
 # Sign up at: https://www.alphavantage.co/support/#api-key
-ALPHA_ADVANTAGE_API_KEY=B8XU0VKAEBT9E6JG
+ALPHA_ADVANTAGE_API_KEY={{ADD KEY}}
 
 # Frontend API
 VITE_API_URL=http://localhost:3001
