--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # Environment Variables
 
-# Financial Modeling Prep API Key
-# Sign up at: https://site.financialmodelingprep.com/
-FMP_API_KEY=KIs6Tk1NhP8XZHyzzrfXn94MqGAE9AtL
+# Alpha Vantage API Key
+# Sign up at: https://www.alphavantage.co/support/#api-key
+ALPHA_ADVANTAGE_API_KEY={{ADD KEY}}
 
-# Optional: API settings
-API_BASE_URL=https://financialmodelingprep.com/api/v3
+# Frontend API
+VITE_API_URL=http://localhost:3001
+
+# API settings
 API_TIMEOUT=10000
